# mixturevitae

./: .gitignore  README.md
decontaminate/: Cargo.toml  README.md  decontam_hf.py  index.native.pkl.sources.json  precompress.sh  requirements.txt  run.sh  upload_decontaminated.py
decontaminate/src/: lib.rs  remove.rs
eval/: README.md  launch_eval.py  main_script_loop.sh  setup_node.sh  tasks.txt
math_word_problems/: generate_math.py  math_functions.py  mwp.py  process_math.py
plot/: README.md  dataset_scaling-paper.py  dataset_scaling.py  dataset_scaling_mmlu-paper.py  dataset_scaling_per_task-paper.py  dataset_scaling_per_task.py  figure_for_paper.py  figure_utils.py  language_scaling_v2.py  log_dir_name_mapping-curated_ablations.jsonl  reasoning_scaling_v2.py
plot/data/: language_scaling.csv  log_dir_name_mapping-mxv_decontam.jsonl  log_dir_name_mapping-paperbook_ablations.jsonl  log_dir_name_mapping-parts_removal_ablations.jsonl  log_dir_name_mapping-permissive_1.7b.jsonl  log_dir_name_mapping-wo_subparts.jsonl  log_dir_name_mapping-wo_tier2b.jsonl  log_dir_name_mapping.jsonl  reasoning_scaling.csv  results-curated_ablations.csv
plot/figures/: final_scores_table.csv  final_scores_table.tex
poster/: generate_poster.sh  index.html
poster/overleaf/: iclr2026_conference.bib  (+2 more)
process_data/: README.md  flagged_words.py  math_functions.py  mixture_paper_data_curation.py  open_think.py  os-q2.py  preprocess_data_parallel.py  prism.py  process_math.py
tokenize/: README.md  tokenize.sh
train/: README.md  consolidated_conversion_workflow.py
(+49 files in other folders)
