[package]
name = "fast_decont"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_decont"
crate-type = ["cdylib"] # Compile as a Python-loadable library

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# High-performance HashMap/HashSet
hashbrown = "0.14"

# One-time global initialization
once_cell = "1.18"

# Unicode normalization
unicode-normalization = "0.1"

# Regex
regex = "1.10"

# Hashing
blake2 = "0.10"
hex = "0.4"

# Binary file I/O
byteorder = "1.5"

# --- NEW Dependencies for File-based architecture ---
# Parquet file reader
parquet = "53.0.0" # <-- Upgraded to v53
# Arrow integration (for reading Parquet)
arrow = "53.0.0"   # <-- Upgraded to v53

# --- REMOVED explicit chrono dependency ---
# It will now be pulled in as a dependency of arrow

# JSON serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

